--- a/m5out/config.ini
+++ b/m5out/config.ini
@@ -10,7 +10,7 @@ time_sync_spin_threshold=100000000
 
 [system]
 type=System
-children=clk_domain cpu dvfs_handler mem_ctrl membus
+children=clk_domain cpu dvfs_handler l2bus l2cache mem_ctrl membus
 boot_osflags=a
 cache_line_size=64
 eventq_index=0
@@ -42,7 +42,7 @@ work_cpus_ckpt_count=0
 work_end_ckpt_count=0
 work_end_exit_count=0
 work_item_id=-1
-system_port=system.membus.slave[3]
+system_port=system.membus.slave[2]
 
 [system.clk_domain]
 type=SrcClockDomain
@@ -60,7 +60,7 @@ voltage=1.0
 
 [system.cpu]
 type=TimingSimpleCPU
-children=dtb interrupts isa itb tracer workload
+children=dcache dtb icache interrupts isa itb tracer workload
 branchPred=Null
 checker=Null
 clk_domain=system.clk_domain
@@ -95,8 +95,76 @@ system=system
 tracer=system.cpu.tracer
 wait_for_remote_gdb=false
 workload=system.cpu.workload
-dcache_port=system.membus.slave[1]
-icache_port=system.membus.slave[0]
+dcache_port=system.cpu.dcache.cpu_side
+icache_port=system.cpu.icache.cpu_side
+
+[system.cpu.dcache]
+type=Cache
+children=replacement_policy tags
+addr_ranges=0:18446744073709551615
+assoc=2
+clk_domain=system.clk_domain
+clusivity=mostly_incl
+compressor=Null
+data_latency=2
+default_p_state=UNDEFINED
+demand_mshr_reserve=1
+eventq_index=0
+is_read_only=false
+max_miss_count=0
+mshrs=4
+p_state_clk_gate_bins=20
+p_state_clk_gate_max=1000000000000
+p_state_clk_gate_min=1000
+power_model=
+prefetch_on_access=false
+prefetcher=Null
+replacement_policy=system.cpu.dcache.replacement_policy
+response_latency=2
+sequential_access=false
+size=65536
+system=system
+tag_latency=2
+tags=system.cpu.dcache.tags
+tgts_per_mshr=20
+warmup_percentage=0
+write_allocator=Null
+write_buffers=8
+writeback_clean=false
+cpu_side=system.cpu.dcache_port
+mem_side=system.l2bus.slave[1]
+
+[system.cpu.dcache.replacement_policy]
+type=LRURP
+eventq_index=0
+
+[system.cpu.dcache.tags]
+type=BaseSetAssoc
+children=indexing_policy
+assoc=2
+block_size=64
+clk_domain=system.clk_domain
+default_p_state=UNDEFINED
+entry_size=64
+eventq_index=0
+indexing_policy=system.cpu.dcache.tags.indexing_policy
+p_state_clk_gate_bins=20
+p_state_clk_gate_max=1000000000000
+p_state_clk_gate_min=1000
+power_model=
+replacement_policy=system.cpu.dcache.replacement_policy
+sequential_access=false
+size=65536
+system=system
+tag_latency=2
+warmup_percentage=0
+
+[system.cpu.dcache.tags.indexing_policy]
+type=SetAssociative
+assoc=2
+entry_size=64
+eventq_index=0
+size=65536
 
 [system.cpu.dtb]
 type=X86TLB
@@ -118,6 +186,74 @@ p_state_clk_gate_min=1000
 power_model=
 system=system
 
+[system.cpu.icache]
+type=Cache
+children=replacement_policy tags
+addr_ranges=0:18446744073709551615
+assoc=2
+clk_domain=system.clk_domain
+clusivity=mostly_incl
+compressor=Null
+data_latency=2
+default_p_state=UNDEFINED
+demand_mshr_reserve=1
+eventq_index=0
+is_read_only=false
+max_miss_count=0
+mshrs=4
+p_state_clk_gate_bins=20
+p_state_clk_gate_max=1000000000000
+p_state_clk_gate_min=1000
+power_model=
+prefetch_on_access=false
+prefetcher=Null
+replacement_policy=system.cpu.icache.replacement_policy
+response_latency=2
+sequential_access=false
+size=16384
+system=system
+tag_latency=2
+tags=system.cpu.icache.tags
+tgts_per_mshr=20
+warmup_percentage=0
+write_allocator=Null
+write_buffers=8
+writeback_clean=false
+cpu_side=system.cpu.icache_port
+mem_side=system.l2bus.slave[0]
+
+[system.cpu.icache.replacement_policy]
+type=LRURP
+eventq_index=0
+
+[system.cpu.icache.tags]
+type=BaseSetAssoc
+children=indexing_policy
+assoc=2
+block_size=64
+clk_domain=system.clk_domain
+default_p_state=UNDEFINED
+entry_size=64
+eventq_index=0
+indexing_policy=system.cpu.icache.tags.indexing_policy
+p_state_clk_gate_bins=20
+p_state_clk_gate_max=1000000000000
+p_state_clk_gate_min=1000
+power_model=
+replacement_policy=system.cpu.icache.replacement_policy
+sequential_access=false
+size=16384
+system=system
+tag_latency=2
+warmup_percentage=0
+
+[system.cpu.icache.tags.indexing_policy]
+type=SetAssociative
+assoc=2
+entry_size=64
+eventq_index=0
+size=16384
+
 [system.cpu.interrupts]
 type=X86LocalApic
 children=clk_domain
@@ -126,7 +262,7 @@ eventq_index=0
 int_latency=1000
 pio_latency=100000
 system=system
-int_master=system.membus.slave[2]
+int_master=system.membus.slave[1]
 int_slave=system.membus.master[1]
 pio=system.membus.master[0]
 
@@ -196,6 +332,106 @@ enable=false
 eventq_index=0
 sys_clk_domain=system.clk_domain
 transition_latency=100000000
+
+[system.l2bus]
+type=CoherentXBar
+children=snoop_filter
+clk_domain=system.clk_domain
+default_p_state=UNDEFINED
+eventq_index=0
+forward_latency=0
+frontend_latency=1
+max_outstanding_snoops=512
+max_routing_table_size=512
+p_state_clk_gate_bins=20
+p_state_clk_gate_max=1000000000000
+p_state_clk_gate_min=1000
+point_of_coherency=false
+point_of_unification=true
+power_model=
+response_latency=1
+snoop_filter=system.l2bus.snoop_filter
+snoop_response_latency=1
+system=system
+use_default_range=false
+width=32
+master=system.l2cache.cpu_side
+slave=system.cpu.icache.mem_side system.cpu.dcache.mem_side
+
+[system.l2bus.snoop_filter]
+type=SnoopFilter
+eventq_index=0
+lookup_latency=0
+max_capacity=8388608
+system=system
+
+[system.l2cache]
+type=Cache
+children=replacement_policy tags
+addr_ranges=0:18446744073709551615
+assoc=8
+clk_domain=system.clk_domain
+clusivity=mostly_incl
+compressor=Null
+data_latency=20
+default_p_state=UNDEFINED
+demand_mshr_reserve=1
+eventq_index=0
+is_read_only=false
+max_miss_count=0
+mshrs=20
+p_state_clk_gate_bins=20
+p_state_clk_gate_max=1000000000000
+p_state_clk_gate_min=1000
+power_model=
+prefetch_on_access=false
+prefetcher=Null
+replacement_policy=system.l2cache.replacement_policy
+response_latency=20
+sequential_access=false
+size=262144
+system=system
+tag_latency=20
+tags=system.l2cache.tags
+tgts_per_mshr=12
+warmup_percentage=0
+write_allocator=Null
+write_buffers=8
+writeback_clean=false
+cpu_side=system.l2bus.master[0]
+mem_side=system.membus.slave[0]
+
+[system.l2cache.replacement_policy]
+type=LRURP
+eventq_index=0
+
+[system.l2cache.tags]
+type=BaseSetAssoc
+children=indexing_policy
+assoc=8
+block_size=64
+clk_domain=system.clk_domain
+default_p_state=UNDEFINED
+entry_size=64
+eventq_index=0
+indexing_policy=system.l2cache.tags.indexing_policy
+p_state_clk_gate_bins=20
+p_state_clk_gate_max=1000000000000
+p_state_clk_gate_min=1000
+power_model=
+replacement_policy=system.l2cache.replacement_policy
+sequential_access=false
+size=262144
+system=system
+tag_latency=20
+warmup_percentage=0
+
+[system.l2cache.tags.indexing_policy]
+type=SetAssociative
+assoc=8
+entry_size=64
+eventq_index=0
+size=262144
 
 [system.mem_ctrl]
 type=DRAMCtrl
@@ -311,7 +547,7 @@ system=system
 use_default_range=false
 width=16
 master=system.cpu.interrupts.pio system.cpu.interrupts.int_slave system.mem_ctrl.port
-slave=system.cpu.icache_port system.cpu.dcache_port system.cpu.interrupts.int_master system.system_port
+slave=system.l2cache.mem_side system.cpu.interrupts.int_master system.system_port
 
 [system.membus.snoop_filter]
 type=SnoopFilter
